--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <div class="top-box">
+      <div class="top-box-content">
+        <h4>ABOUT ME 101 - PI 60</h4>
+    </div>
     </div>
     <div class="wrapper">
       <div class="container">
