--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>About Me</h1>
           </div>
           <div class="paragraf">
-            <p>Halo! Nama saya Berton Adiwidya Wibowo, seorang mahasiswa aktif semester 3 departemen Ilmu Komputer IPB University.</p>
+            <p>Halo! Nama saya Berton Adiwidya Wibowo, seorang mahasiswa aktif semester 3 departemen Ilmu Komputer IPB University. Minat saya adalah <i>software engineering</i>. Saya berharap agar bisa menjadi <i>Software Engineer</i> di masa depan.</p>
           </div>
         </div>
         <div class="social-media">
