add header content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="top-box">
       <div class="top-box-content">
-        <h4>HELLO THERE!</h4>
+        <h4>HELLO THERE! PI 60</h4>
     </div>
     </div>
     <div class="wrapper">
